# tracing_opentelemetry_example

./: Cargo.toml  Dockerfile  README.md  config.yaml  docker-compose.yml
src/: main.rs
