[package]
name = "tracing_opentelemetry_example"
version = "0.1.0"
edition = "2024"

[dependencies]
opentelemetry = "0.29.0"
opentelemetry-otlp = "0.29.0"
opentelemetry-semantic-conventions = { version = "0.29.0", features = ["semconv_experimental"] }
opentelemetry_sdk = { version = "0.29.0", features = ["trace"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
